--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "start_url": "/kilogram-frontend/",
     "display": "standalone",
     "background_color": "#fdfdfd",
-    "theme_color": "#db4938",
+    "theme_color": "#00001a",
     "orientation": "portrait-primary",
     "icons": [
         {
