--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "short_name": "Kilogram",
     "start_url": "/kilogram-frontend/",
     "display": "standalone",
-    "background_color": "#fdfdfd",
+    "background_color": "#000000",
     "theme_color": "#00001a",
     "orientation": "portrait-primary",
     "icons": [
