--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
         "deploy": "gh-pages -d dist"
     },
     "dependencies": {
+        "@reduxjs/toolkit": "^2.3.0",
         "bootstrap": "^5.3.3",
         "gh-pages": "^6.2.0",
         "react": "^18.3.1",
         "react-bootstrap": "^2.10.5",
         "react-dom": "^18.3.1",
+        "react-redux": "^9.1.2",
         "react-router-dom": "^6.27.0"
     },
     "devDependencies": {
