--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "build": "tsc -b && vite build",
         "lint": "eslint .",
         "preview": "vite preview",
-        "deploy": "gh-pages -d dist"
+        "deploy": "gh-pages -d dist",
+        "generate-api": "node scripts/generate-api.mjs"
     },
     "dependencies": {
         "@reduxjs/toolkit": "^2.3.0",
@@ -26,10 +27,12 @@
         "@types/react-dom": "^18.3.1",
         "@types/react-router-dom": "^5.3.3",
         "@vitejs/plugin-react": "^4.3.3",
+        "axios": "^1.7.8",
         "eslint": "^9.13.0",
         "eslint-plugin-react-hooks": "^5.0.0",
         "eslint-plugin-react-refresh": "^0.4.14",
         "globals": "^15.11.0",
+        "swagger-typescript-api": "^13.0.23",
         "typescript": "~5.6.2",
         "typescript-eslint": "^8.11.0",
         "vite": "^5.4.10"
