--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "build": "tsc -b && vite build",
         "lint": "eslint .",
         "preview": "vite preview",
-        "deploy": "gh-pages -d dist"
+        "deploy": "gh-pages -d dist",
+        "tauri": "tauri"
     },
     "dependencies": {
         "@reduxjs/toolkit": "^2.3.0",
@@ -22,6 +23,8 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.13.0",
+        "@tauri-apps/api": "^2.1.1",
+        "@tauri-apps/cli": "^2.1.0",
         "@types/react": "^18.3.12",
         "@types/react-dom": "^18.3.1",
         "@types/react-router-dom": "^5.3.3",
